syntax = "proto3";

service UserService {
    rpc Login (LoginRequest) returns (LoginResponse);
    rpc ChangePassword (ChangePasswordRequest) returns (ChangePasswordResponse);
    rpc RefreshAccessToken (RefreshTokenRequest) returns (RefreshTokenResponse);
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string accessToken = 1;
    string refreshToken = 2;
}

message ChangePasswordRequest {
    string userId = 1;
    string oldPassword = 2;
    string newPassword = 3;
}

message ChangePasswordResponse {
    bool success = 1;
}

message RefreshTokenRequest {
    string refreshToken = 1;
}

message RefreshTokenResponse {
    string accessToken = 1;
}

